# MacWhisper-neo

./: .gitignore  CLAUDE.md  README.md
agents/engineering/: ai-engineer.md  backend-architect.md  frontend-developer.md
agents/project-management/: sprint-prioritizer.md
agents/testing/: api-tester.md  test-results-analyzer.md
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx
app/src/components/: AddModelModal.tsx  DropZone.tsx  ExportMenu.tsx  HistoryPanel.tsx  MetaPanel.tsx  TranscriptView.tsx
app/src/hooks/: useTranscription.ts
app/src/lib/: export.ts  tauri.ts
app/src/stores/: transcriptStore.ts
app/src/types/: index.ts
data/: app.db-shm  app.db-wal
docs/: architecture.md  code-review-2026-03-09.md  code-review-2026-03-10-antigravity.md  multi-provider-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: file.rs  history.rs  mod.rs  models.rs  providers.rs  settings.rs  transcribe.rs  youtube.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/engine/: anthropic.rs  gemini.rs  lm_studio.rs  mod.rs  openai_whisper.rs  registry.rs  whisper_cpp.rs
src-tauri/src/models/: mod.rs  segment.rs  transcript.rs
